--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@tailwindcss/cli": "^4.1.18",
     "flowbite": "^4.0.1",
     "tailwindcss": "^4.1.18"
+  },
+  "scripts": {
+    "watch": "npx @tailwindcss/cli -i ./css/input.css -o ./css/output.css --watch"
   }
 }
